Modified Files. Added Exception Handling in Division Divisor not be 0

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /Lab Task Code 6.asm
 /Lab Task Code 7.asm
 /Lab Task Code 8.asm
+Calculator Project/Calculator SAMPLE Code(Demo).asm
+Calculator Project/Calculator Project.txt
