--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /Lab Task Code 8.asm
 Calculator Project/Calculator SAMPLE Code(Demo).asm
 Calculator Project/Calculator Project.txt
+Food Ordering Bot (Project)/Sample Code.asm
